Finished swagger documentation
